add loader after insert

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,9 @@
                   <input type="file" id="myfile" name='myfile' accept=".csv">
 
           </div>
-          <form action="/csv/add" method="post" role="form">
+          <!-- <form action="/csv/add" method="post" role="form"> -->
+          
+          <form role="form">
 
             <div class="box-body">
               <div class="form-group">
