--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -15,9 +15,9 @@
 </div>
 
 <!-- jQuery 2.2.3 -->
-<<script src="../../plugins/jQuery/jquery-2.2.3.min.js"></script>
+<script src="../../plugins/jQuery/jquery-2.2.3.min.js"></script>
 <!-- Bootstrap 3.3.6 -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+<script src="../../plugins/modernizr.js"></script>
 
 <script src="../../bootstrap/js/bootstrap.min.js"></script>
 <!-- DataTables -->
@@ -45,9 +45,8 @@
     });
   });
 </script>
-<script src="/js/socket.io.js"></script>
-<script src="/js/main.js"></script>
-<script src="/js/myjs.js"></script>
+
+<script src="/js/bundle.js"></script>
 
 </body>
 </html>
