--- a/views/showcsv.ejs
+++ b/views/showcsv.ejs
@@ -2,7 +2,6 @@
 <% include header %>
 <div class="se-pre-con"></div>
 <div class="content-wrapper">
-  <!-- Content Header (Page header) -->
   <section class="content-header">
     <h1>
       Dashboard
@@ -15,70 +14,51 @@
   </section>
   <section class="content">
     <div class="row">
-      <!-- left column -->
       <div class="col-md-12">
-        <!-- general form elements -->
-     
- <div class="box">
-            <div class="box-header">
-              <h3 class="box-title">Data Table With Full Features</h3>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body map-columns">
-              <table id="example1" class="table table-bordered table-striped">
-                <%  var count= Object.keys(csvm).length%>
-              <%   var keys = Object.keys(csvm[count-5]) %>
-                <thead>
-                <tr>
-			<% for (var i = 1; i < keys.length-1; i++) { -%>
-			<th>
-			<%=	keys[i]	%>
-			</th>
-			<% } -%>
-		</tr>
-                </thead>
-                <tbody>
-                		<% for (var i = 1; i < csvm.length-1; i++) { -%>
-		<tr>
-
-<% for (var j = 1; j < keys.length-1; j++) { -%>
-
-			<td> 
-<%=  csvm[i][keys[j]]%>
-
-			</td>
-
-			<% } -%>
-		</tr>
-
-<% } -%>
-                </tbody>
-                <tfoot>
-                                <tr>
-			<% for (var i = 1; i < keys.length-1; i++) { -%>
-			<th>
-			<%=	keys[i]	%>
-			</th>
-			<% } -%>
-		</tr>
-                  
-                </tfoot>
-              </table>
-            </div>
-            <!-- /.box-body -->
+        <div class="box">
+          <div class="box-header">
+            <h3 class="box-title">Data Table With Full Features</h3>
           </div>
-        </div></div></section>
-
+          <div class="box-body map-columns">
+            <table id="example1" class="table table-bordered table-striped">
+              <%  var count= uniqueNames.length%>
+              <thead>
+                <tr>
+                 <% for (var i = 1; i < count; i++) { -%>
+                 <th>
+                   <%=	uniqueNames[i]	%>
+                 </th>
+                 <% } -%>
+               </tr>
+             </thead>
+             <tbody>
+              <% for (var i = 0; i < csvm.length; i++) { -%>
+              <tr>
+                <% for (var j = 1; j < count; j++) { -%>
+                <td> 
+                  <%=  csvm[i][uniqueNames[j]]%>
+                </td>
+                <% } -%>
+              </tr>
+              <% } -%>
+            </tbody>
+            <tfoot>
+              <tr>
+                <% for (var i = 1; i < count; i++) { -%>
+                <th>
+                  <%= uniqueNames[i]  %>
+                </th>
+                <% } -%>
+              </tr>
+            </tfoot>
+          </table>
+        </div>
       </div>
-
-<% include footer %>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
-
-//paste this code under the head tag or in a separate js file.
-  // Wait for window load
+    </div></div></section>
+  </div>
+  <% include footer %>
   <script>
-     $(window).ready(function() {
-    // Animate loader off screen
+   $(window).ready(function() {
     $(".se-pre-con").fadeOut("slow");;
   });
-  </script>
+</script>
