--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -31,8 +31,10 @@
 <script src="../../dist/js/app.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="../../dist/js/demo.js"></script>
-
+<!-- Sparkline -->
+<script src="../../plugins/sparkline/jquery.sparkline.min.js"></script>
 <script src="/js/socket.io.js"></script>
+
 <script src="/js/main.js"></script>
 <script src="/js/myjs.js"></script>
 
