--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,12 +15,69 @@
 
       <div class="navbar-custom-menu">
         <ul class="nav navbar-nav">
+         <li class="dropdown notifications-menu ">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-bell-o"></i>
+              <span class="label labelnoti"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li class="header">You have a notifications</li>
+              <li>
+                <!-- inner menu: contains the actual data -->
+                <ul class="menu">
+                  <li>
+                    <a href="#">
+                      <i class="fa fa-users text-aqua"></i> your upload complete
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+
+                </ul>
+              </li>
+              <li class="footer"><a href="#">View all</a></li>
+            </ul>
+          </li>
+        <li class="dropdown tasks-menu">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              <i class="fa fa-flag-o"></i>
+              <span class="label labeltask"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li class="header">You have 1 tasks</li>
+              <li>
+                <!-- inner menu: contains the actual data -->
+                <ul class="menu">
+            
+        
+                  <!-- end task item -->
+                  <li><!-- Task item -->
+                    <a href="#">
+                      <h3>
+                        Make beautiful transitions
+                        <small class="pull-right percentte">0%</small>
+                      </h3>
+                      <div class="progress xs">
+                        <div class="progress-bar progress-bar-yellow" id="mydiv" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                        </div>
+                      </div>
+                    </a>
+                  </li>
+                  <!-- end task item -->
+                </ul>
+              </li>
+              <li class="footer">
+                <a href="#">View all tasks</a>
+              </li>
+            </ul>
+          </li>
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <img src="/dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
               <span class="hidden-xs"><%= name %></span>
             </a>
             <ul class="dropdown-menu">
+
               <!-- User image -->
               <li class="user-header">
                 <img src="/dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
@@ -34,7 +91,8 @@
               <li class="user-body">
                 <div class="row">
                   <div class="col-xs-4 text-center">
-                    <a href="#">Followers</a>
+                  <div class="col-xs-6 col-md-3 text-center">
+                </div>
                   </div>
                   <div class="col-xs-4 text-center">
                     <a href="#">Sales</a>
